fixed links overflowing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,6 +28,10 @@ img {
   height: auto;
 }
 
+a {
+  overflow-wrap: break-word;
+}
+
 button {
   cursor: pointer;
 }
